Fix layouts on narrow screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,18 +8,23 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  background-color: #373d48;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
 }
 
 nav {
+  background-color: #373d48;
+  color: #fff;
   font-family: 'Blanch Caps';
   font-size: 24px;
   padding: 0;
   margin: 0;
   display: block;
-  width: 135px;
-  float: left;
+  width: 140px;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
 }
 
 nav img {
@@ -30,7 +35,7 @@ nav img {
   /*height: 100px;*/
    width: 140px;
   height: 120px;
-   
+
 }
 
 nav ul {
@@ -57,12 +62,8 @@ nav a {
 }
 
 .content {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
   height: 100%;
-  margin-left: 135px;
+  margin-left: 140px;
   background-color:#fff;
   color: #000;
 }
@@ -206,7 +207,7 @@ display: inline-block;
   border: 0px;
   font-size: 4em;
   margin-top: -10px;
-  float: right; 
+  float: right;
   margin-right:20px;
 }
 
@@ -300,7 +301,7 @@ div.tooltip {
 
 #lightbox .nvtooltip {
   background-color: transparent;
-  color: black; 
+  color: black;
   border: 0px;
 }
 
